--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,9 @@ repositories {
 def allureVersion = "2.16.0",
     okioVersion = "2.10.0",
     gsonFireVersion = "1.8.5",
-    gsonVersion = "2.8.6",
+    gsonVersion = '2.8.8',
     restAssuredVersion = "4.4.0",
+    awaitilityVersion = "3.0.0",
     junitVersion = "5.8.1"
 
 allure {
@@ -39,6 +40,7 @@ dependencies {
             "io.qameta.allure:allure-rest-assured:$allureVersion",
             "org.junit.jupiter:junit-jupiter-api:$junitVersion",
             "org.junit.jupiter:junit-jupiter-params:$junitVersion",
+            "org.awaitility:awaitility:$awaitilityVersion"
     )
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
